# Donna

./: .env.example  .gitignore  README.md  plans.md  pyproject.toml
config/: config.yaml
config/prompts/: coder.txt  critic.txt  router.txt  sysadmin.txt
donna/: __init__.py  cli.py  config.py  setup.py  shell.py
donna/agents/: __init__.py  base_agent.py  coder.py  critic.py  router.py  sysadmin.py
donna/memory/: feedback.py
donna/models/: __init__.py  base.py  groq_backend.py  ollama_backend.py
donna/safety/: interceptor.py
donna/system/: fingerprint.py
donna/tools/: __init__.py  clipboard.py  filesystem.py  process.py  registry.py  shell_exec.py
tests/: test_agents.py  test_cli.py  test_config.py  test_fingerprint.py  test_memory.py  test_models.py  test_safety.py  test_setup.py  test_tools.py
